# MOM-Know

./: .env.template  .gitignore  CLAUDE.md  REFACTOR.md  TODO.md  dev_upload_neo4j.py  docker-compose.linux.yml  docker-compose.mom.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  start_up_steps.sh  test_database_meta.json  test_sql_db.py
backend/: pyproject.toml
backend/package/: pyproject.toml
backend/package/yuxi/agents/: context.py
backend/package/yuxi/config/: __init__.py  app.py  java_config.py  redis_config.py
backend/package/yuxi/knowledge/: __init__.py  schemas.py
backend/package/yuxi/models/: embed.py  rerank.py
backend/package/yuxi/repositories/: agent_config_repository.py  agent_repository.py  knowledge_chunk_repository.py  skill_repository.py  sql_database_repository.py  sql_database_tables_repository.py  sql_example_repository.py  terminology_repository.py
backend/package/yuxi/services/: chat_service.py  java_token_service.py  model_cache.py  model_provider_service.py  run_worker.py  sql_example_service.py  sso_service.py  task_service.py  term_service.py  tool_service.py
backend/package/yuxi/sql_database/: __init__.py  base.py  factory.py  manager.py
backend/package/yuxi/utils/: auth_utils.py  sql_password_crypto.py
backend/scripts/: api_endpoints.jsonl  api_neo4j.py  api_scenarios.json
backend/server/: main.py  worker_main.py
backend/server/routers/: __init__.py  agent_router.py  auth_apikey_router.py  auth_router.py  chat_router.py  knowledge_router.py  model_provider_router.py  sql_database_router.py  system_router.py  tool_router.py  user_router.py
backend/server/utils/: auth_middleware.py  lifespan.py
backend/test/integration/api/: test_apikey_router.py  test_auth_router.py  test_chat_router.py  test_department_router.py
backend/test/unit/agents/: test_subagent_tool_filter.py
backend/test/unit/backends/: test_sandbox_backends.py  test_semantic_chunking.py
backend/test/unit/graphs/: test_milvus_graph_build.py
backend/test/unit/knowledge/: test_knowledge_base_update.py  test_milvus_retrieval_config.py  test_paddleocr_api_parser.py
backend/test/unit/middlewares/: test_subagent_task_middleware.py
backend/test/unit/plugins/: test_milvus_kb.py  test_ragflow_like_chunking.py
backend/test/unit/repositories/: test_agent_repository.py  test_knowledge_chunk_repository.py
backend/test/unit/routers/: test_sql_database_router_password_crypto.py
docker/: api-base.Dockerfile  (+2 more)
(+269 files in other folders)
